[workspace]
resolver = "2"

members = [
    "tutorial",
    "version-helper",

    "analytics/analytics",

    "audio/audiofx",
    "audio/claxon",
    "audio/csound",
    "audio/elevenlabs",
    "audio/lewton",
    "audio/speechmatics",
    "audio/spotify",

    "generic/file",
    "generic/originalbuffer",
    "generic/sodium",
    "generic/threadshare",
    "generic/inter",
    "generic/streamgrouper",
    "generic/gopbuffer",

    "mux/flavors",
    "mux/fmp4",
    "mux/mp4",

    "net/aws",
    "net/hlsmultivariantsink",
    "net/hlssink3",
    "net/mpegtslive",
    "net/ndi",
    "net/onvif",
    "net/raptorq",
    "net/reqwest",
    "net/rtp",
    "net/rtsp",
    "net/webrtchttp",
    "net/webrtc",
    "net/webrtc/protocol",
    "net/webrtc/signalling",
    "net/quinn",

    "text/ahead",
    "text/json",
    "text/regex",
    "text/wrap",

    "utils/fallbackswitch",
    "utils/livesync",
    "utils/togglerecord",
    "utils/tracers",
    "utils/uriplaylistbin",

    "video/cdg",
    "video/closedcaption",
    "video/dav1d",
    "video/ffv1",
    "video/gif",
    "video/gtk4",
    "video/hsv",
    "video/png",
    "video/rav1e",
    "video/skia",
    "video/videofx",
    "video/vvdec",
    "video/webp",
]

# Only plugins without external dependencies
default-members = [
    "version-helper",

    "analytics/analytics",

    "audio/audiofx",
    "audio/claxon",
    "audio/lewton",

    "generic/originalbuffer",
    "generic/threadshare",
    "generic/inter",
    "generic/gopbuffer",
    "generic/streamgrouper",

    "mux/fmp4",
    "mux/mp4",

    "net/aws",
    "net/mpegtslive",
    "net/hlssink3",
    "net/onvif",
    "net/raptorq",
    "net/reqwest",
    "net/rtp",
    "net/rtsp",
    "net/webrtchttp",
    "net/webrtc",
    "net/webrtc/protocol",
    "net/webrtc/signalling",
    "net/ndi",
    "net/quinn",

    "text/ahead",
    "text/json",
    "text/regex",
    "text/wrap",

    "utils/fallbackswitch",
    "utils/livesync",
    "utils/togglerecord",
    "utils/tracers",
    "utils/uriplaylistbin",

    "video/cdg",
    "video/ffv1",
    "video/gif",
    "video/hsv",
    "video/png",
    "video/rav1e",
]

[profile.release]
lto = "thin"
opt-level = 3
debug = true
panic = 'unwind'

[profile.dev]
opt-level = 1
lto = "off"

[workspace.package]
version = "0.14.2"
repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
edition = "2021"
rust-version = "1.83"

[workspace.dependencies]
glib = { git = "https://github.com/gtk-rs/gtk-rs-core", branch = "0.21", version = "0.21" }
gio = { git = "https://github.com/gtk-rs/gtk-rs-core", branch = "0.21", version = "0.21" }
cairo-rs = { git = "https://github.com/gtk-rs/gtk-rs-core", branch = "0.21", version = "0.21", features=["use_glib"] }
pango = { git = "https://github.com/gtk-rs/gtk-rs-core", branch = "0.21", version = "0.21" }
pangocairo = { git = "https://github.com/gtk-rs/gtk-rs-core", branch = "0.21", version = "0.21" }
gtk = { package = "gtk4", git = "https://github.com/gtk-rs/gtk4-rs", branch = "0.10", version = "0.10", features = ["v4_6"]}
gdk-wayland = { package = "gdk4-wayland", git = "https://github.com/gtk-rs/gtk4-rs", branch = "0.10", version = "0.10", features = ["v4_4"]}
gdk-x11 = { package = "gdk4-x11", git = "https://github.com/gtk-rs/gtk4-rs", branch = "0.10", version = "0.10", features = ["v4_4"]}
gdk-win32 = { package = "gdk4-win32", git = "https://github.com/gtk-rs/gtk4-rs", branch = "0.10", version = "0.10", features = ["v4_4"]}
gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "0.24", version = "0.24" }
gst-allocators = { package = "gstreamer-allocators", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "0.24", version = "0.24" }
gst-analytics = { package = "gstreamer-analytics", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "0.24", version = "0.24" }
gst-app = { package = "gstreamer-app", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "0.24", version = "0.24" }
gst-audio = { package = "gstreamer-audio", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "0.24", version = "0.24" }
gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "0.24", version = "0.24" }
gst-check = { package = "gstreamer-check", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "0.24", version = "0.24" }
gst-gl = { package = "gstreamer-gl", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "0.24", version = "0.24" }
gst-gl-egl = { package = "gstreamer-gl-egl", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "0.24", version = "0.24" }
gst-gl-wayland = { package = "gstreamer-gl-wayland", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "0.24", version = "0.24" }
gst-gl-x11 = { package = "gstreamer-gl-x11", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "0.24", version = "0.24" }
gst-net = { package = "gstreamer-net", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "0.24", version = "0.24" }
gst-pbutils = { package = "gstreamer-pbutils", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "0.24", version = "0.24" }
gst-plugin-version-helper = { path="./version-helper", version = "0.8" }
gst-rtp = { package = "gstreamer-rtp", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "0.24", version = "0.24" }
gst-sdp = { package = "gstreamer-sdp", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "0.24", version = "0.24" }
gst-tag = { package = "gstreamer-tag", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "0.24", version = "0.24" }
gst-utils = { package = "gstreamer-utils", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "0.24", version = "0.24" }
gst-video = { package = "gstreamer-video", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "0.24", version = "0.24" }
gst-webrtc = { package = "gstreamer-webrtc", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "0.24", version = "0.24" }
