[workspace]
resolver = "3"

members = [
    "tutorial",
    "version-helper",

    "analytics/analytics",
    "analytics/burn",

    "audio/audiofx",
    "audio/audioparsers",
    "audio/claxon",
    "audio/csound",
    "audio/demucs",
    "audio/elevenlabs",
    "audio/lewton",
    "audio/speechmatics",
    "audio/spotify",
    "audio/whisper",

    "generic/file",
    "generic/originalbuffer",
    "generic/sodium",
    "generic/threadshare",
    "generic/inter",
    "generic/streamgrouper",
    "generic/gopbuffer",

    "mux/flavors",
    "mux/isobmff",

    "net/aws",
    "net/deepgram",
    "net/hlsmultivariantsink",
    "net/hlssink3",
    "net/icecast",
    "net/mpegtslive",
    "net/ndi",
    "net/onvif",
    "net/raptorq",
    "net/reqwest",
    "net/rtp",
    "net/rtsp",
    "net/webrtchttp",
    "net/webrtc",
    "net/webrtc/protocol",
    "net/webrtc/signalling",
    "net/quinn",

    "text/accumulate",
    "text/ahead",
    "text/json",
    "text/regex",
    "text/wrap",

    "utils/fallbackswitch",
    "utils/livesync",
    "utils/debugseimetainserter",
    "utils/togglerecord",
    "utils/tracers",
    "utils/uriplaylistbin",
    "utils/validate",

    "video/cdg",
    "video/closedcaption",
    "video/dav1d",
    "video/ffv1",
    "video/gif",
    "video/gtk4",
    "video/hsv",
    "video/png",
    "video/rav1e",
    "video/skia",
    "video/videofx",
    "video/vvdec",
    "video/webp",
]

# Only plugins without external dependencies
default-members = [
    "version-helper",

    "analytics/analytics",
    "analytics/burn",

    "audio/audioparsers",
    "audio/audiofx",
    "audio/claxon",
    "audio/demucs",
    "audio/lewton",

    "generic/originalbuffer",
    "generic/threadshare",
    "generic/inter",
    "generic/gopbuffer",
    "generic/streamgrouper",

    "mux/isobmff",

    "net/aws",
    "net/mpegtslive",
    "net/hlssink3",
    "net/icecast",
    "net/onvif",
    "net/raptorq",
    "net/reqwest",
    "net/rtp",
    "net/rtsp",
    "net/webrtchttp",
    "net/webrtc",
    "net/webrtc/protocol",
    "net/webrtc/signalling",
    "net/ndi",
    "net/quinn",

    "text/accumulate",
    "text/ahead",
    "text/json",
    "text/regex",
    "text/wrap",

    "utils/fallbackswitch",
    "utils/livesync",
    "utils/debugseimetainserter",
    "utils/togglerecord",
    "utils/tracers",
    "utils/uriplaylistbin",
    "utils/validate",

    "video/cdg",
    "video/ffv1",
    "video/gif",
    "video/hsv",
    "video/png",
    "video/rav1e",
]

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
debug = true
panic = 'unwind'

[profile.dev]
opt-level = 1
lto = "off"

[workspace.package]
version = "0.16.0-alpha"
repository = "https://gitlab.freedesktop.org/gstreamer/gst-plugins-rs"
edition = "2024"
rust-version = "1.92"

[workspace.dependencies]
glib = { git = "https://github.com/gtk-rs/gtk-rs-core", branch = "main", version = "0.23.0-alpha" }
gio = { git = "https://github.com/gtk-rs/gtk-rs-core", branch = "main", version = "0.23.0-alpha" }
cairo-rs = { git = "https://github.com/gtk-rs/gtk-rs-core", branch = "main", features=["use_glib"], version = "0.23.0-alpha" }
pango = { git = "https://github.com/gtk-rs/gtk-rs-core", branch = "main", version = "0.23.0-alpha" }
pangocairo = { git = "https://github.com/gtk-rs/gtk-rs-core", branch = "main", version = "0.23.0-alpha" }
gtk = { package = "gtk4", git = "https://github.com/gtk-rs/gtk4-rs", branch = "main", features = ["v4_6"], version = "0.12.0-alpha" }
gdk-wayland = { package = "gdk4-wayland", git = "https://github.com/gtk-rs/gtk4-rs", branch = "main", features = ["v4_4"], version = "0.12.0-alpha" }
gdk-x11 = { package = "gdk4-x11", git = "https://github.com/gtk-rs/gtk4-rs", branch = "main", features = ["v4_4"], version = "0.12.0-alpha" }
gdk-win32 = { package = "gdk4-win32", git = "https://github.com/gtk-rs/gtk4-rs", branch = "main", features = ["v4_4"], version = "0.12.0-alpha" }
gst = { package = "gstreamer", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main", version = "0.26.0-alpha" }
gst-allocators = { package = "gstreamer-allocators", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main", version = "0.26.0-alpha" }
gst-analytics = { package = "gstreamer-analytics", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main", version = "0.26.0-alpha" }
gst-app = { package = "gstreamer-app", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main", version = "0.26.0-alpha" }
gst-audio = { package = "gstreamer-audio", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main", version = "0.26.0-alpha" }
gst-base = { package = "gstreamer-base", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main", version = "0.26.0-alpha" }
gst-check = { package = "gstreamer-check", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main", version = "0.26.0-alpha" }
gst-gl = { package = "gstreamer-gl", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main", version = "0.26.0-alpha" }
gst-gl-egl = { package = "gstreamer-gl-egl", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main", version = "0.26.0-alpha" }
gst-gl-wayland = { package = "gstreamer-gl-wayland", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main", version = "0.26.0-alpha" }
gst-gl-x11 = { package = "gstreamer-gl-x11", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main", version = "0.26.0-alpha" }
gst-net = { package = "gstreamer-net", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main", version = "0.26.0-alpha" }
gst-pbutils = { package = "gstreamer-pbutils", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main", version = "0.26.0-alpha" }
gst-plugin-version-helper = { path="./version-helper", version = "0.8" }
gst-rtp = { package = "gstreamer-rtp", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main", version = "0.26.0-alpha" }
gst-sdp = { package = "gstreamer-sdp", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main", version = "0.26.0-alpha" }
gst-tag = { package = "gstreamer-tag", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main", version = "0.26.0-alpha" }
gst-utils = { package = "gstreamer-utils", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main", version = "0.26.0-alpha" }
gst-validate = { package = "gstreamer-validate", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main", version = "0.26.0-alpha" }
gst-video = { package = "gstreamer-video", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main", version = "0.26.0-alpha" }
gst-webrtc = { package = "gstreamer-webrtc", git = "https://gitlab.freedesktop.org/gstreamer/gstreamer-rs", branch = "main", version = "0.26.0-alpha" }
gst-plugin-webrtc-protocol = { path="net/webrtc/protocol", package = "gst-plugin-webrtc-signalling-protocol", version = "0.16.0-alpha" }
gst-plugin-webrtc-signalling = { path="net/webrtc/signalling", package = "gst-plugin-webrtc-signalling", version = "0.16.0-alpha" }
gst-plugin-isobmff = { path="mux/isobmff", version = "0.16.0-alpha" }
gst-plugin-gtk4 = { path="video/gtk4", version = "0.16.0-alpha" }
gst-plugin-rtp = { path="net/rtp", version = "0.16.0-alpha" }
gst-plugin-hlssink3 = { path="net/hlssink3", version = "0.16.0-alpha" }
